[package]
name = "rushdown-highlighting"
version = "0.9.7"
edition = "2021"
rust-version = "1.87"
description = "Syntax -highlighting extension for rushdown markdown parser"
documentation = "https://docs.rs/rushdown-highlighting"
homepage = "https://github.com/yuin/rushdown-highlighting"
repository = "https://github.com/yuin/rushdown-highlighting"
readme = "README.md"
keywords = ["markdown", "commonmark"]
license = "MIT"
categories = ["text-processing"]
resolver = "2"

[profile.release]
opt-level = 3
debug = false
lto = true
codegen-units = 1
panic = 'abort'

[features]
default = ["std"]
# std = ["rushdown/default", "rushdown/pp-ast"]
std = ["rushdown/default"]

[dependencies]
rushdown = { version = "0.17.0", default-features = false}
syntect = { version = "5.3.0", default-features = false, features = ["default-fancy"]}
